--- a/tools/WPA/CMakeLists.txt
+++ b/tools/WPA/CMakeLists.txt
@@ -5,7 +5,7 @@ if(DEFINED IN_SOURCE_BUILD)
 else()
     add_executable( wpa wpa.cpp )
 
-    target_link_libraries( wpa Svf Cudd ${llvm_libs} )
+    target_link_libraries( wpa Svf Cudd ${llvm_libs}  ${Boost_LIBRARIES})
 
     set_target_properties( wpa PROPERTIES
                            RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
